--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<table border="1" width="400" cellpadding="2" cellspacing="10">
 			<tr>
 				<td> 1.kast esimeses reas</td>
-				<td><p><img src="Matrix.jpg" alt="" longdesc="" width="80" height="60"/></p></td>
+				<td> 2.kast esimeses reas</td>
 				<td rowspan="3">3.kast esimeses reas kolmandas veerus läbi kolme rea</td>
 			</tr>
 			<tr>
