--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Kõigis muudes punktides on sul lehe sisu osas vabad käed! Millest seal lehel k
 <p> <h3>Pilt</h3> 
 
  <img src="EETN26.jpg" alt="Pilt" />
-<img src="EETN26.jpg" alt="Pilt">
+<img src="kala1.jpg" alt="Pilt">
 </p>
 
 </body>
