--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Kõigis muudes punktides on sul lehe sisu osas vabad käed! Millest seal lehel k
 	
 <p> <h3>Pilt</h3> 
 
- <img src="pilt1.jpg" alt="Pilt1">
+ <img src="kala11.jpg" alt="Pilt1">
 <img src="pilt2.jpg" alt="Pilt 2">
 </p>
 
