--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ Kõigis muudes punktides on sul lehe sisu osas vabad käed! Millest seal lehel k
 	
 <p> <h3>Pilt</h3> 
 
- <img src="kala11.jpg" alt="Pilt1">
-<img src="pilt3.PNG" alt="Pilt 2">
+ <img src="pilt3.PNG" alt="Pilt ">
 </p>
 
 </body>
